--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,3 +1,5 @@
-<div class="text-3xl font-bold underline">
-  This is the main application component.
+<div class="flex flex-col min-h-screen">
+  <app-header></app-header>
+  <app-content></app-content>
+  <app-footer></app-footer>
 </div>
