--- a/src/app/header/header.html
+++ b/src/app/header/header.html
@@ -1,3 +1,6 @@
 <header class="bg-blue-600 text-white p-4">
-  <h1 class="text-2xl font-bold">Karnaugh Map Advanced</h1>
+  <div class="flex items-center">
+    <img src="assets/AppIcon.png" alt="Logo" class="h-10 w-10 mr-4 rounded bg-white p-1" />
+    <h1 class="text-2xl font-bold">Karnaugh Map Advanced</h1>
+  </div>
 </header>
