--- a/src/app/content/content.html
+++ b/src/app/content/content.html
@@ -1,5 +1,4 @@
 <main class="flex-1 p-6 bg-gray-50 min-h-[60vh]">
-  <div class="text-3xl font-bold underline">
-    This is the main application component.
-  </div>
+  <app-content-item *ngFor="let rrr of kMapFeatures" [kMapFeature]="rrr">
+  </app-content-item>
 </main>
