Update ContentItem component

--- a/src/app/header/header.html
+++ b/src/app/header/header.html
@@ -1,6 +1,9 @@
 <header class="bg-blue-600 text-white p-4">
   <div class="flex items-center">
-    <img src="assets/AppIcon.png" alt="Logo" class="h-10 w-10 mr-4 rounded bg-white p-1" />
-    <h1 class="text-2xl font-bold">Karnaugh Map Advanced</h1>
+    <img src="assets/AppIcon.png" alt="Logo" class="h-20 w-20 mr-4 rounded bg-white p-1" />
+    <h1 class="font-bold">
+      <span class="block md:hidden text-4xl">Karnaugh Map</span>
+      <span class="hidden md:block text-4xl">Karnaugh Map Advanced</span>
+    </h1>
   </div>
 </header>
