Add bigger text and remove shadow and border.

--- a/src/app/content-item/content-item.html
+++ b/src/app/content-item/content-item.html
@@ -1,8 +1,8 @@
-<div class="flex flex-col md:flex-row items-center justify-center bg-white rounded shadow p-4 mb-4 text-center">
+<div class="flex flex-col md:flex-row items-center justify-center bg-white p-4 mb-4 text-center">
   <div class="flex justify-center items-center w-full md:w-1/2">
     <img [src]="kMapFeature()?.imageUrl" alt="Content image" class="w-64 object-cover rounded mb-4 md:mb-0" />
   </div>
-  <div class="text-lg flex justify-center items-center w-full md:w-1/2">
+  <div class="text-5xl font-bold flex justify-center items-center w-full md:w-1/2">
     {{ kMapFeature()?.text }}
   </div>
 </div>
