--- a/src/app/content/content.html
+++ b/src/app/content/content.html
@@ -1,4 +1,4 @@
-<main class="flex-1 p-6 bg-gray-50 min-h-[60vh]">
-  <app-content-item *ngFor="let rrr of kMapFeatures" [kMapFeature]="rrr">
+<main class="flex-1 p-6 bg-gray-100 min-h-[60vh]">
+  <app-content-item *ngFor="let kMapFeature of kMapFeatures" [kMapFeature]="kMapFeature">
   </app-content-item>
 </main>
