--- a/src/app/header/header.html
+++ b/src/app/header/header.html
@@ -1,9 +1,9 @@
-<header class="bg-blue-600 text-white p-4">
+<header class="bg-blue-600 text-white p-4 rounded-4xl mt-4 ml-4 mr-4 mb-0">
   <div class="flex items-center">
-    <img src="assets/AppIcon.png" alt="Logo" class="h-20 w-20 mr-4 rounded bg-white p-1" />
+    <img src="assets/AppIcon.png" alt="Logo" class="h-32 w-32 mr-4 rounded-3xl bg-white p-1" />
     <h1 class="font-bold">
-      <span class="block md:hidden text-4xl">Karnaugh Map</span>
-      <span class="hidden md:block text-4xl">Karnaugh Map Advanced</span>
+      <span class="block md:hidden text-3xl">Karnaugh Map</span>
+      <span class="hidden md:block text-3xl">Karnaugh Map Advanced</span>
     </h1>
   </div>
 </header>
