--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,4 +1,4 @@
-<div class="flex flex-col min-h-screen">
+<div class="flex flex-col min-h-screen bg-gray-100">
   <app-header></app-header>
   <app-content></app-content>
   <app-footer></app-footer>
