Add links for AppStore and for X

--- a/src/app/footer/footer.html
+++ b/src/app/footer/footer.html
@@ -1,3 +1,8 @@
-<footer class="bg-blue-600 text-white p-4 text-center">
-  &copy; 2025 Karnaugh Map Advanced. All rights reserved.
+<footer class="bg-blue-600 text-white p-4 text-center flex flex-col items-center">
+  <div class="mb-2">
+    &copy; 2025 Karnaugh Map Advanced. All rights reserved.
+  </div>
+  <a href="https://x.com/icigic" target="_blank" rel="noopener" class="inline-block">
+    <img src="assets/XLogo.png" alt="X Logo" class="h-8 w-8" />
+  </a>
 </footer>
