--- a/src/app/header/header.html
+++ b/src/app/header/header.html
@@ -1,9 +1,14 @@
 <header class="bg-blue-600 text-white p-4 rounded-4xl mt-4 ml-4 mr-4 mb-0">
-  <div class="flex items-center">
-    <img src="assets/AppIcon.png" alt="Logo" class="h-32 w-32 mr-4 rounded-3xl bg-white p-1" />
-    <h1 class="font-bold">
-      <span class="block md:hidden text-3xl">Karnaugh Map</span>
-      <span class="hidden md:block text-3xl">Karnaugh Map Advanced</span>
-    </h1>
+  <div class="flex items-center justify-between">
+    <div class="flex items-center">
+      <img src="assets/AppIcon.png" alt="Logo" class="h-32 w-32 mr-4 rounded-3xl bg-white p-1" />
+      <h1 class="font-bold">
+        <span class="block md:hidden text-3xl">Karnaugh Map</span>
+        <span class="hidden md:block text-3xl">Karnaugh Map Advanced</span>
+      </h1>
+    </div>
+    <a href="https://apps.apple.com/us/app/karnaugh-map-advanced/id429025121" target="_blank" rel="noopener">
+      <img src="assets/AppStoreBadge.svg" alt="App Store Badge" class="h-16 w-auto ml-4" />
+    </a>
   </div>
 </header>
