--- a/src/app/footer/footer.html
+++ b/src/app/footer/footer.html
@@ -1,4 +1,4 @@
-<footer class="bg-blue-600 text-white p-4 text-center flex flex-col items-center">
+<footer class="bg-white text-black p-4 m-4 mt-0 text-center flex flex-col items-center rounded-4xl">
   <div class="mb-2">
     &copy; 2025 Karnaugh Map Advanced. All rights reserved.
   </div>
